// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/RuleTemplate/List should render project rule template list list when it first entered the page 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            审核规则模版
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  class="custom-icon custom-icon-refresh css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="extra"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <svg
                  fill="none"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    id="login-box-line"
                  >
                    <path
                      d="M2.66665 10.0002H3.99998V13.3335H12V2.66683H3.99998V6.00016H2.66665V2.00016C2.66665 1.82335 2.73688 1.65378 2.86191 1.52876C2.98693 1.40373 3.1565 1.3335 3.33331 1.3335H12.6666C12.8435 1.3335 13.013 1.40373 13.1381 1.52876C13.2631 1.65378 13.3333 1.82335 13.3333 2.00016V14.0002C13.3333 14.177 13.2631 14.3465 13.1381 14.4716C13.013 14.5966 12.8435 14.6668 12.6666 14.6668H3.33331C3.1565 14.6668 2.98693 14.5966 2.86191 14.4716C2.73688 14.3465 2.66665 14.177 2.66665 14.0002V10.0002ZM6.66665 7.3335V5.3335L9.99998 8.00016L6.66665 10.6668V8.66683H1.33331V7.3335H6.66665Z"
                      fill="#292C33"
                      id="Vector"
                    />
                  </g>
                </svg>
              </span>
              <span>
                导入规则模板
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  class="custom-icon custom-icon-add css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6.41663 6.41663V2.91663H7.58329V6.41663H11.0833V7.58329H7.58329V11.0833H6.41663V7.58329H2.91663V6.41663H6.41663Z"
                    />
                  </svg>
                </span>
              </span>
              <span>
                创建规则模版
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center full-width-element flex-space-between css-c38ntt"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="项目规则模版"
                  >
                    项目规则模版
                  </div>
                </label>
                <label
                  class="ant-segmented-item"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="公共规则模板"
                  >
                    公共规则模板
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        />
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left ant-table-has-fix-right"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col
                      style="width: 300px;"
                    />
                    <col />
                    <col />
                    <col
                      style="width: 204px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        scope="col"
                        style="position: sticky; left: 0px;"
                      >
                        模版名称
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        描述
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        可应用的数据库类型
                      </th>
                      <th
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        scope="col"
                        style="position: sticky; right: 0px;"
                      >
                        操作
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="test1"
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      >
                        <a
                          href="/sqle/project/700300/rule/template/detail/test1/MySQL"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 12px;"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="file-list-2-fill"
                                  >
                                    <path
                                      d="M13.3333 14.6668H2.66667C2.48986 14.6668 2.32029 14.5966 2.19526 14.4716C2.07024 14.3465 2 14.177 2 14.0002V2.00016C2 1.82335 2.07024 1.65378 2.19526 1.52876C2.32029 1.40373 2.48986 1.3335 2.66667 1.3335H13.3333C13.5101 1.3335 13.6797 1.40373 13.8047 1.52876C13.9298 1.65378 14 1.82335 14 2.00016V14.0002C14 14.177 13.9298 14.3465 13.8047 14.4716C13.6797 14.5966 13.5101 14.6668 13.3333 14.6668ZM5.33333 4.66683V6.00016H10.6667V4.66683H5.33333ZM5.33333 7.3335V8.66683H10.6667V7.3335H5.33333ZM5.33333 10.0002V11.3335H8.66667V10.0002H5.33333Z"
                                      fill="#C3C6CD"
                                      id="Vector"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              test1
                            </div>
                          </div>
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="test desc"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line css-wgj5gs css-dev-only-do-not-override-bj9uhl"
                        >
                          test desc
                          <div
                            aria-label="Copy"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="Copy"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-1uw16ge"
                        >
                          <img
                            alt=""
                          />
                          <span
                            title="MySQL"
                          >
                            MySQL
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  删 除
                                </span>
                              </button>
                            </div>
                          </div>
                          <button
                            class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-geipcv"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                class="custom-icon custom-icon-more-fill css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="currentColor"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M3.33333 6.66663C2.6 6.66663 2 7.26663 2 7.99996C2 8.73329 2.6 9.33329 3.33333 9.33329C4.06667 9.33329 4.66667 8.73329 4.66667 7.99996C4.66667 7.26663 4.06667 6.66663 3.33333 6.66663ZM12.6667 6.66663C11.9333 6.66663 11.3333 7.26663 11.3333 7.99996C11.3333 8.73329 11.9333 9.33329 12.6667 9.33329C13.4 9.33329 14 8.73329 14 7.99996C14 7.26663 13.4 6.66663 12.6667 6.66663ZM8 6.66663C7.26667 6.66663 6.66667 7.26663 6.66667 7.99996C6.66667 8.73329 7.26667 9.33329 8 9.33329C8.73333 9.33329 9.33333 8.73329 9.33333 7.99996C9.33333 7.26663 8.73333 6.66663 8 6.66663Z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="t1"
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      >
                        <a
                          href="/sqle/project/700300/rule/template/detail/t1/MySQL"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 12px;"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="file-list-2-fill"
                                  >
                                    <path
                                      d="M13.3333 14.6668H2.66667C2.48986 14.6668 2.32029 14.5966 2.19526 14.4716C2.07024 14.3465 2 14.177 2 14.0002V2.00016C2 1.82335 2.07024 1.65378 2.19526 1.52876C2.32029 1.40373 2.48986 1.3335 2.66667 1.3335H13.3333C13.5101 1.3335 13.6797 1.40373 13.8047 1.52876C13.9298 1.65378 14 1.82335 14 2.00016V14.0002C14 14.177 13.9298 14.3465 13.8047 14.4716C13.6797 14.5966 13.5101 14.6668 13.3333 14.6668ZM5.33333 4.66683V6.00016H10.6667V4.66683H5.33333ZM5.33333 7.3335V8.66683H10.6667V7.3335H5.33333ZM5.33333 10.0002V11.3335H8.66667V10.0002H5.33333Z"
                                      fill="#C3C6CD"
                                      id="Vector"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              t1
                            </div>
                          </div>
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-1uw16ge"
                        >
                          <img
                            alt=""
                          />
                          <span
                            title="MySQL"
                          >
                            MySQL
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  删 除
                                </span>
                              </button>
                            </div>
                          </div>
                          <button
                            class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-geipcv"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                class="custom-icon custom-icon-more-fill css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="currentColor"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M3.33333 6.66663C2.6 6.66663 2 7.26663 2 7.99996C2 8.73329 2.6 9.33329 3.33333 9.33329C4.06667 9.33329 4.66667 8.73329 4.66667 7.99996C4.66667 7.26663 4.06667 6.66663 3.33333 6.66663ZM12.6667 6.66663C11.9333 6.66663 11.3333 7.26663 11.3333 7.99996C11.3333 8.73329 11.9333 9.33329 12.6667 9.33329C13.4 9.33329 14 8.73329 14 7.99996C14 7.26663 13.4 6.66663 12.6667 6.66663ZM8 6.66663C7.26667 6.66663 6.66667 7.26663 6.66667 7.99996C6.66667 8.73329 7.26667 9.33329 8 9.33329C8.73333 9.33329 9.33333 8.73329 9.33333 7.99996C9.33333 7.26663 8.73333 6.66663 8 6.66663Z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key=""
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      />
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                        style="position: sticky; right: 0px;"
                      >
                        <div
                          class="css-new95e"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  编 辑
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  删 除
                                </span>
                              </button>
                            </div>
                          </div>
                          <button
                            class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-icon-only actiontech-table-actions-button actiontech-table-actions-more-button basic-button-wrapper css-geipcv"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <span
                                class="custom-icon custom-icon-more-fill css-u3jcp4"
                                role="img"
                              >
                                <svg
                                  fill="currentColor"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M3.33333 6.66663C2.6 6.66663 2 7.26663 2 7.99996C2 8.73329 2.6 9.33329 3.33333 9.33329C4.06667 9.33329 4.66667 8.73329 4.66667 7.99996C4.66667 7.26663 4.06667 6.66663 3.33333 6.66663ZM12.6667 6.66663C11.9333 6.66663 11.3333 7.26663 11.3333 7.99996C11.3333 8.73329 11.9333 9.33329 12.6667 9.33329C13.4 9.33329 14 8.73329 14 7.99996C14 7.26663 13.4 6.66663 12.6667 6.66663ZM8 6.66663C7.26667 6.66663 6.66667 7.26663 6.66667 7.99996C6.66667 8.73329 7.26667 9.33329 8 9.33329C8.73333 9.33329 9.33333 8.73329 9.33333 7.99996C9.33333 7.26663 8.73333 6.66663 8 6.66663Z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 3 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/RuleTemplate/List should render public rule template list 1`] = `
<body>
  <div>
    <div
      class="actiontech-page-header-namespace css-1xspr0w"
    >
      <div
        class="title"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            审核规则模版
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-icon-only basic-button-wrapper css-geipcv"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  class="custom-icon custom-icon-refresh css-u3jcp4"
                  role="img"
                >
                  <svg
                    fill="currentColor"
                    height="14"
                    viewBox="0 0 14 14"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.18677 2.58588C4.24526 1.66868 5.59943 1.16468 7.00002 1.16663C10.2218 1.16663 12.8334 3.77821 12.8334 6.99996C12.8334 8.24596 12.4425 9.40096 11.7775 10.3483L9.91669 6.99996H11.6667C11.6668 6.08508 11.3979 5.19035 10.8936 4.42703C10.3892 3.66371 9.67165 3.06547 8.83004 2.7067C7.98844 2.34793 7.05994 2.24446 6.15999 2.40914C5.26005 2.57383 4.42837 2.99941 3.76835 3.63296L3.18677 2.58588ZM10.8133 11.414C9.75478 12.3312 8.40061 12.8353 7.00002 12.8333C3.77827 12.8333 1.16669 10.2217 1.16669 6.99996C1.16669 5.75396 1.55752 4.59896 2.22252 3.65163L4.08335 6.99996H2.33335C2.33328 7.91485 2.60213 8.80958 3.10647 9.5729C3.61081 10.3362 4.32839 10.9345 5.17 11.2932C6.0116 11.652 6.9401 11.7555 7.84005 11.5908C8.73999 11.4261 9.57167 11.0005 10.2317 10.367L10.8133 11.414Z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="extra"
      />
    </div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center full-width-element flex-space-between css-c38ntt"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px;"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-segmented-group"
              >
                <label
                  class="ant-segmented-item"
                >
                  <input
                    checked=""
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="项目规则模版"
                  >
                    项目规则模版
                  </div>
                </label>
                <label
                  class="ant-segmented-item ant-segmented-item-selected"
                >
                  <input
                    class="ant-segmented-item-input"
                    type="radio"
                  />
                  <div
                    class="ant-segmented-item-label"
                    title="公共规则模板"
                  >
                    公共规则模板
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-space-item"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        />
      </div>
    </div>
    <div
      class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
    >
      <div
        class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-table ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-left"
          >
            <div
              class="ant-table-container"
            >
              <div
                class="ant-table-content"
                style="overflow-x: auto; overflow-y: hidden;"
              >
                <table
                  style="min-width: 100%; table-layout: auto;"
                >
                  <colgroup>
                    <col
                      style="width: 300px;"
                    />
                  </colgroup>
                  <thead
                    class="ant-table-thead"
                  >
                    <tr>
                      <th
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        scope="col"
                        style="position: sticky; left: 0px;"
                      >
                        模版名称
                      </th>
                      <th
                        class="ant-table-cell ellipsis-column-width"
                        scope="col"
                      >
                        描述
                      </th>
                      <th
                        class="ant-table-cell"
                        scope="col"
                      >
                        可应用的数据库类型
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="ant-table-tbody"
                  >
                    <tr
                      aria-hidden="true"
                      class="ant-table-measure-row"
                      style="height: 0px; font-size: 0px;"
                    >
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                      <td
                        style="padding: 0px; border: 0px; height: 0px;"
                      >
                        <div
                          style="height: 0px; overflow: hidden;"
                        >
                           
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="default_template"
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      >
                        <a
                          href="/sqle/rule-manager/global-detail/default_template/MySQL"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 12px;"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="file-list-2-fill"
                                  >
                                    <path
                                      d="M13.3333 14.6668H2.66667C2.48986 14.6668 2.32029 14.5966 2.19526 14.4716C2.07024 14.3465 2 14.177 2 14.0002V2.00016C2 1.82335 2.07024 1.65378 2.19526 1.52876C2.32029 1.40373 2.48986 1.3335 2.66667 1.3335H13.3333C13.5101 1.3335 13.6797 1.40373 13.8047 1.52876C13.9298 1.65378 14 1.82335 14 2.00016V14.0002C14 14.177 13.9298 14.3465 13.8047 14.4716C13.6797 14.5966 13.5101 14.6668 13.3333 14.6668ZM5.33333 4.66683V6.00016H10.6667V4.66683H5.33333ZM5.33333 7.3335V8.66683H10.6667V7.3335H5.33333ZM5.33333 10.0002V11.3335H8.66667V10.0002H5.33333Z"
                                      fill="#C3C6CD"
                                      id="Vector"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              default_template
                            </div>
                          </div>
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        <div
                          aria-label="test desc"
                          class="ant-typography ant-typography-ellipsis ant-typography-single-line css-wgj5gs css-dev-only-do-not-override-bj9uhl"
                        >
                          test desc
                          <div
                            aria-label="Copy"
                            class="ant-typography-copy"
                            role="button"
                            style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                            tabindex="0"
                          >
                            <span
                              aria-label="copy"
                              class="anticon anticon-copy"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="copy"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                />
                              </svg>
                            </span>
                          </div>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
                          >
                            lg
                          </span>
                          <span
                            aria-hidden="true"
                            style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
                          >
                            <span
                              aria-hidden="true"
                            >
                              ...
                            </span>
                            <div
                              aria-label="Copy"
                              class="ant-typography-copy"
                              role="button"
                              style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
                              tabindex="0"
                            >
                              <span
                                aria-label="copy"
                                class="anticon anticon-copy"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="copy"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                                  />
                                </svg>
                              </span>
                            </div>
                          </span>
                        </div>
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-1uw16ge"
                        >
                          <img
                            alt=""
                          />
                          <span
                            title="MySQL"
                          >
                            MySQL
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key="global_test"
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      >
                        <a
                          href="/sqle/rule-manager/global-detail/global_test/MySQL"
                        >
                          <div
                            class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 12px;"
                            >
                              <span
                                class="custom-icon css-u3jcp4"
                              >
                                <svg
                                  fill="none"
                                  height="16"
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <g
                                    id="file-list-2-fill"
                                  >
                                    <path
                                      d="M13.3333 14.6668H2.66667C2.48986 14.6668 2.32029 14.5966 2.19526 14.4716C2.07024 14.3465 2 14.177 2 14.0002V2.00016C2 1.82335 2.07024 1.65378 2.19526 1.52876C2.32029 1.40373 2.48986 1.3335 2.66667 1.3335H13.3333C13.5101 1.3335 13.6797 1.40373 13.8047 1.52876C13.9298 1.65378 14 1.82335 14 2.00016V14.0002C14 14.177 13.9298 14.3465 13.8047 14.4716C13.6797 14.5966 13.5101 14.6668 13.3333 14.6668ZM5.33333 4.66683V6.00016H10.6667V4.66683H5.33333ZM5.33333 7.3335V8.66683H10.6667V7.3335H5.33333ZM5.33333 10.0002V11.3335H8.66667V10.0002H5.33333Z"
                                      fill="#C3C6CD"
                                      id="Vector"
                                    />
                                  </g>
                                </svg>
                              </span>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              global_test
                            </div>
                          </div>
                        </a>
                      </td>
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        <div
                          class="css-1uw16ge"
                        >
                          <img
                            alt=""
                          />
                          <span
                            title="MySQL"
                          >
                            MySQL
                          </span>
                        </div>
                      </td>
                    </tr>
                    <tr
                      class="ant-table-row ant-table-row-level-0"
                      data-row-key=""
                    >
                      <td
                        class="ant-table-cell ant-table-cell-fix-left ant-table-cell-fix-left-last"
                        style="position: sticky; left: 0px;"
                      />
                      <td
                        class="ant-table-cell ellipsis-column-width"
                      >
                        -
                      </td>
                      <td
                        class="ant-table-cell"
                      >
                        -
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
          <ul
            class="ant-pagination ant-table-pagination ant-table-pagination-right actiontech-table-pagination actiontech-table-pagination-fixed css-dev-only-do-not-override-bj9uhl"
          >
            <li
              class="ant-pagination-total-text"
            >
              <span>
                共 3 条数据
              </span>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-prev ant-pagination-disabled"
              title="Previous Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
              tabindex="0"
              title="1"
            >
              <a
                rel="nofollow"
              >
                1
              </a>
            </li>
            <li
              aria-disabled="true"
              class="ant-pagination-next ant-pagination-disabled"
              title="Next Page"
            >
              <button
                class="ant-pagination-item-link"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  aria-label="right"
                  class="anticon anticon-right"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="right"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                    />
                  </svg>
                </span>
              </button>
            </li>
            <li
              class="ant-pagination-options"
            >
              <div
                aria-label="Page Size"
                class="ant-select ant-pagination-options-size-changer css-dev-only-do-not-override-bj9uhl ant-select-single ant-select-show-arrow ant-select-show-search"
              >
                <div
                  class="ant-select-selector"
                >
                  <span
                    class="ant-select-selection-search"
                  >
                    <input
                      aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
                      aria-autocomplete="list"
                      aria-controls="rc_select_TEST_OR_SSR_list"
                      aria-expanded="false"
                      aria-haspopup="listbox"
                      aria-label="Page Size"
                      aria-owns="rc_select_TEST_OR_SSR_list"
                      autocomplete="off"
                      class="ant-select-selection-search-input"
                      id="rc_select_TEST_OR_SSR"
                      role="combobox"
                      type="search"
                      value=""
                    />
                  </span>
                  <span
                    class="ant-select-selection-item"
                    title="20 / page"
                  >
                    20 / page
                  </span>
                </div>
                <span
                  aria-hidden="true"
                  class="ant-select-arrow"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    aria-label="down"
                    class="anticon anticon-down ant-select-suffix"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</body>
`;
